--- a/.gitignore
+++ b/.gitignore
@@ -51,4 +51,18 @@ Module.symvers
 Mkfile.old
 dkms.conf
 
-*.vscode
+.vscode
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
+CMakeUserPresets.json
+.idea
+cmake-build-debug
